--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,21 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+#cabecera{
+    background: rgb(86, 86, 213);
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.49);
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+}
+
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container{
     width: 70%;
     padding: 1em;
@@ -15,4 +30,3 @@ body{
     color: brown;
     font-size: 25px;
 }
-
