Cambios en la fuente de parrafo del container. MASTER

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #container{
