--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
 #cabecera{
@@ -18,6 +18,7 @@ body{
     font-size: 0.8em;
 }
 
+
 #container{
     width: 70%;
     padding: 1em;
@@ -30,3 +31,4 @@ body{
     color: brown;
     font-size: 25px;
 }
+
