--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,9 @@ body{
     font-size: 25px;
 }
 
+#footer{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
