Cambio al tagline y color de footer :)

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ body{
 
 
 #footer{
-    background: #777;
+    background: rgb(86, 86, 213);
     color: white;
     text-align: center;
     padding: 0.5em;
